fix huge gap between gallery images and captions

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -391,25 +391,31 @@ th {
   gap: var(--se-padding);
 }
 
-.g-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.g-item-container {
   width: calc(33% - (var(--se-padding) / 2));
-  margin: 0;
+  aspect-ratio: 1 / 1;
 }
 
 @media screen and (max-width: 600px) {
-  .g-item {
+  .g-item-container {
     width: 100%;
   }
 }
 
 @media screen and (min-width: 601px) and (max-width: 900px) {
-  .g-item {
+  .g-item-container {
     width: calc(50% - (var(--se-padding) / 2));
   }
+}
+
+.g-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 .g-img-container {
@@ -418,12 +424,13 @@ th {
   justify-content: center;
   min-height: 0;
   min-width: 0;
-  aspect-ratio: 1 / 1;
 }
 
 .g-img-container > img {
   border-radius: 0.25rem;
   transition: all 250ms cubic-bezier(0,.65,.5,1);
+  min-height: 0;
+  min-width: 0;
   max-width: 100%;
   max-height: 100%;
   box-shadow: 0 5px 10px rgba(0,0,0,0.5);
@@ -437,20 +444,21 @@ th {
   width: 90%;
   margin-top: 1rem;
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
-  gap: 1rem;
+  justify-content: flex-start;
 }
 
 .g-label-container > p {
   text-align: left;
   width: 100%;
   font-style: oblique 10deg;
-  font-size: 20px;
+  font-size: 24px;
+  margin-bottom: 0.5em;
 }
 
 .g-label-container > time {
   text-align: right;
-  font-size: 34px;
   transform: translateY(-0.15em);
 }
 
@@ -507,6 +515,10 @@ th {
 }
 
 #viewer-container figcaption {
+  margin-top: 1rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
   flex-grow: 0;
   max-width: 800px;
   width: 100%;
@@ -515,6 +527,19 @@ th {
   padding: 1rem;
   border-radius: 0.75rem;
   box-shadow: 0 5px 10px rgba(0,0,0,0.5);
+}
+
+#viewer-container figcaption > p {
+  text-align: left;
+  width: 100%;
+  font-style: oblique 10deg;
+  font-size: 20px;
+}
+
+#viewer-container figcaption > time {
+  text-align: right;
+  font-size: 34px;
+  transform: translateY(-0.15em);
 }
 
 /* header */
